[workspace]
members = [
    "contracts/*",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/cw-ibc-lite"
rust-version  = "1.77"
keywords      = ["cosmos", "cosmwasm", "ibc"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std = { version = "2.0.1", features = [
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  "cosmwasm_1_4",
  "stargate",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
