[workspace]
members = [
    "contracts/*",
    "packages/*",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/cw-ibc-lite"
rust-version  = "1.77"
keywords      = ["cosmos", "cosmwasm", "ibc"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.5"
cosmwasm-std = { version = "1.5.5", features = [
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  "cosmwasm_1_4",
  "stargate",
] }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-ownable = "0.5.1"
ibc-core-host = { version = "0.53.0", default-features = false }
ibc-client-cw = "0.53.0"
ibc-client-tendermint = { version = "0.53.0", default-features = false, features = ["std", "serde", "schema"] }
cw-ibc-lite-types = { version = "0.1.0", path = "./packages/types/" }
