[package]
name = "cw-ibc-lite-ics20-transfer"
description = "ICS-20 Transfer application for `cw-ibc-lite`"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# exclude export feature to disable all instantiate/execute/query exports
default = ["export"]
export = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-ownable = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
cw-ibc-lite-shared = { workspace = true }
cw-ibc-lite-ics26-router = { workspace = true }
